Bug 330704 - Cannot undo "Move" transform in Sketch view. (Switching to Desktop shows option)
Summary: Cannot undo "Move" transform in Sketch view. (Switching to Desktop shows option)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Krita Gemini (show other bugs)
Version: 2.8 Beta
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Stuart Dickson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-03 14:08 UTC by Stuart Dickson
Modified: 2014-02-21 10:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stuart Dickson 2014-02-03 14:08:58 UTC
When the user moves a layer, there is way to undo the action from within the Sketch view

(hence this issue also affects Sketch, but it does demonstrate the ability to undo the move from the full Desktop view)

Reproducible: Always

Steps to Reproduce:
1. Open a file with multiple layers in Krita Gemini/Sketch from the Sketch view
2. Ensure a layer is selected
3. Select the move tool
4. Move the layer
5. Open the menu to undo the layer
Actual Results:  
The "Undo" button in the menu is disabled

Expected Results:  
The "Undo" button should be enabled and clicking it should undo the move action.

If the user switches to Desktop view, they will have the option to undo the move operation.
Comment 1 Stuart Dickson 2014-02-03 14:13:19 UTC
If the user switches to Desktop view and then back to Sketch, the undo and redo buttons appear and function normally.

Additionally, if the user tried to close Krita immediately after moving the layer/stroke, the app would shut down without prompting the user to save their work - discarding the change. So Sketch is not recognising that the canvas has been modified by the move operation.
Comment 2 Halla Rempt 2014-02-19 09:08:52 UTC
Fixed in 653046cd3912bfb2965422a26e4d5f1dfb954bc0
Comment 3 Dan Leinir Turthra Jensen 2014-02-21 10:18:56 UTC
The fix has been reverted, as it had unintended side effects. However, the bug was not quite a bug anyway so leaving it fixed. Implementation of an overlay to fix the interaction methods and remove confusion is pending.