Make each move using the move tool an undoable action.

This will increase the undo stack faster, but it means we get a
proper undo action for each move, without having to accept the
move in some secret way (enter will do it, or changing to anoher
tool). It also ensures we get the ability to undo move actions
in Sketch mode immediately.

BUG:330704